--- a/style.css
+++ b/style.css
@@ -13,9 +13,13 @@ html, body {
   align-items: center;
   justify-content: center;
 }
+
 canvas {
   width: 100%;
   height: 100%;
   display: block;
   background: #000;
+
+  /* Set font via CSS variable */
+  --ascii-font: 'Fira Code', monospace;
 }
